tests/errors/unresolved-reference-behind-unary.spcasmtest
org 0
mov a,~does_not_exist
